Fix: S2 - Ricart & Agrawla working in an isolated environment of HWB and LWBs