@@ -5,7 +5,7 @@ import java.util.LinkedList;
 import java.util.List;
 
 public class RicAndAgr extends Thread{
-    private static final int NUM_LIGHTWEIGHTS = 3;
+    private static final int NUM_LIGHTWEIGHTS = 2;
     private int myts;
     private LamportClock clock;
     private LinkedList<Integer> cua;
@@ -22,24 +22,21 @@ public class RicAndAgr extends Thread{
     public void requestCS(List<PrintWriter> outLW) throws InterruptedException {
         clock.tick();
         myts = clock.getValue();
-        broadcastMSG(outLW, myId + " request " + myts);
+        broadcastMSG(outLW, "request "+ myId+ " "+ myts);
         numOk=0;
-        synchronized(this){
-            wait();
+        while (numOk < NUM_LIGHTWEIGHTS-1){
+            synchronized(this){
+                wait();
+            }
         }
-
-    }
-
-    private void broadcastMSG(List<PrintWriter> outLW, String s) {
-        for (int i = 0; i < NUM_LIGHTWEIGHTS; i++) {if (i!=myId-1)sendMSG(outLW.get(i), s);}
-
     }
 
     public void releaseCS(List<PrintWriter> outHW) {
         myts= Integer.MAX_VALUE;
         while (!cua.isEmpty()){
-            int pid = cua.remove(0);
-            sendMSG(outHW.get(pid-1),"okay " +" " + myId + " " + clock.getValue());
+            int pid = cua.removeFirst();
+            pid = pid-1== outHW.size()?pid-2:pid-1;
+            sendMSG(outHW.get(pid),"okay " +" " + myId + " " + clock.getValue());
         }
     }
 
@@ -48,8 +45,10 @@ public class RicAndAgr extends Thread{
         int time = Integer.parseInt(sections[2]);
         clock.receiveAction(src, time);
         if (sections[0].equals("request")){
-            if ((myts==Integer.MAX_VALUE)||(time<myts)||((time==myts)&&(src < myId))){
-                sendMSG(out, "okay " +" " + myId + " " + clock.getValue());
+            if ((myts==Integer.MAX_VALUE)
+                    ||(time<myts)
+                    ||((time==myts)&&(src < myId))){
+                sendMSG(out, "okay " + myId + " " + clock.getValue());
             }else{
                 cua.add(src);
             }
@@ -63,6 +62,15 @@ public class RicAndAgr extends Thread{
         }
     }
 
+    private void broadcastMSG(List<PrintWriter> outLW, String s) {
+        int j=0;
+        for (int i = 0; i < NUM_LIGHTWEIGHTS; i++) {
+            if (i!=myId-1){
+                sendMSG(outLW.get(j), s);
+                j++;
+            }
+        }
+    }
     private void sendMSG(PrintWriter out, String s) {
         out.println(s);
     }
